# blitz_auction_website

./: .gitignore  docker-compose-local.yml  docker-compose.yml
backend/: Cargo.toml  Dockerfile
backend/.sqlx/: query-0241c043283fab0efc011584f60c3ebbdd656aec41a8e0678d105cda80b75efd.json  query-278b6f6f6fd6ec86ad03ff0d70035f4b16a0cd70bfa95d686fd2ccb1303921d2.json
backend/migrations/: 20260111184206_initial-schema.sql
backend/src/: auction.rs  draft.rs  draft_runner.rs  endpoints.rs  handlers.rs  lib.rs  main.rs  messages.rs  pokemon.rs
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
frontend/public/: boss-battles.html  gyms.txt  index.html  speciesinfo.txt
frontend/public/PatchNotes/: v1.7 Patch Notes.txt  v1.8 Patch Notes.txt  v1.9 Patch Notes.txt  v2.0 Patch Notes.txt  v2.1 Patch Notes.txt  v2.2 Patch Notes.txt  v2.3 Patch Notes.txt  v2.4 Patch Notes.txt  v2.5 Patch Notes.txt  v2.6 Patch Notes.txt  v2.7 Patch Notes.txt  v2.8 Patch Notes.txt  v2.9 Patch Notes.txt  v3.0 Patch Notes.txt  v4.0 Patch Notes.txt  v4.1 Patch Notes.txt  v4.2 Patch Notes.txt  v4.3 Patch Notes.txt  v4.4 Patch Notes.txt  v4.5 Patch Notes.txt  v4.6 Patch Notes.txt  v4.7 Patch Notes.txt  v4.8 Patch Notes.txt  v4.9 Patch Notes.txt  v5.0 Patch Notes.txt  v5.1 Patch Notes.txt  v5.2 Patch Notes.txt  v5.3 Patch Notes.txt  v5.4 Patch Notes.txt  v5.5 Patch Notes.txt  v5.7 Patch Notes.txt  v5.8 Patch Notes.txt  v5.9 Patch Notes.txt  v6.0 Patch Notes.txt  v6.1 Patch Notes.txt  v6.2 Patch Notes.txt  v6.3 Patch Notes.txt  v6.4 Patch Notes.txt  v6.5 Patch Notes.txt  v6.6 Patch Notes.txt  (+10 more)
frontend/src/: custom.d.ts  index.tsx
frontend/src/pages/FAQ/: FAQ.scss  (+1 more)
(+15 files in other folders)
