[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["macros", "ws"] }
moka = { version = "0.12.12", features = ["future"] }
nanoid = "0.4.0"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "derive", "chrono"] }
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
